feat: add the client configure authentication and start writing my todos

--- a/local.yml
+++ b/local.yml
@@ -9,10 +9,10 @@ services:
     volumes:
       - ./api:/app:z
       - ./api/static:/app/static
-    ports:
-      - "8001:8000"
-    # expose:
-    #   - "8000"
+    # ports:
+    #   - "8001:8000"
+    expose:
+      - "8000"
     env_file:
       - ./.envs/.env.local
     depends_on:
@@ -35,9 +35,41 @@ services:
       - ./.envs/.env.local
     networks:
       - myApps_nw
+  myapps_client:
+    build:
+      context: ./client
+      dockerfile: ../docker/local/react/Dockerfile
+    image: myapps_client
+    container_name: myapps_client
+    # ports:
+    #   - "3000:5173"
+    expose:
+      - "5173"
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+    networks:
+      - myApps_nw
+  myapps_nginx:
+    build:
+      context: ./docker/local/nginx
+      dockerfile: Dockerfile
+    image: myapps_nginx
+    container_name: myapps_nginx
+    ports:
+      - "8080:80"
+    volumes:
+      - ./static:/app/static
+      - ./api/static:/app/static
+      - myapps_logs_store:/var/log/nginx
+    depends_on:
+      - myapps_api
+    networks:
+      - myApps_nw
 
 networks:
   myApps_nw:
 
 volumes:
   myapps_postgres_db_data: {}
+  myapps_logs_store: {}
