feat: deployment and some minor changes

--- a/.envs/.env.example
+++ b/.envs/.env.example
@@ -7,6 +7,11 @@ POSTGRES_HOST=""
 POSTGRES_PORT=""
 
 SIGNING_KEY=""
+SITE_NAME=""
+DOMAIN=''
+GUNICORN_WORKERS=''
+PROD_ENV=""
+COOKIE_SECURE=""
 
 
 
