chore: add jenkinsfile and configure it to run some tests and sent slack notifications

--- a/api/setup.cfg
+++ b/api/setup.cfg
@@ -3,4 +3,4 @@
 DJANGO_SETTINGS_MODULE = config.settings.local
 
 
-addopts = -v -s --cov --cov-report=term-missing
+addopts = -v -s --cov --cov-report=term-missing --cov-report=html:report_data/rep.html
