--- a/local.yml
+++ b/local.yml
@@ -8,7 +8,7 @@ services:
     container_name: myapps_api
     volumes:
       - ./api:/app:z
-      - ./api/static:/app/static
+      - static_data:/app/static
     # ports:
     #   - "8001:8000"
     expose:
@@ -60,7 +60,7 @@ services:
       - "8080:80"
     volumes:
       - ./static:/app/static
-      - ./api/static:/app/static
+      - static_data:/app/static
       - myapps_logs_store:/var/log/nginx
     depends_on:
       - myapps_api
@@ -73,3 +73,4 @@ networks:
 volumes:
   myapps_postgres_db_data: {}
   myapps_logs_store: {}
+  static_data: {}
