--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -40,10 +40,6 @@
    server myapps_api:8000;
   }
 
-  upstream client {
-   server myapps_client:5173;
-  }
-
   map $http_upgrade $connection_upgrade {
     default upgrade;
     '' close;
@@ -52,7 +48,7 @@
   #TODO: this for domain
   server {
     listen 80;
-    server_name drosinakis.com www.drosinakis.com;
+    server_name drosinakis.com www.drosinakis.com test.drosinakis.com;
 
     client_max_body_size  20M;
 
@@ -79,7 +75,9 @@
         proxy_pass http://api;
     }
     location / {
-        proxy_pass http://client;
+      root /app/dist/;
+        index index.html;
+        try_files $uri $uri/ /index.html;
 
     }
     location /static/ {
