--- a/production.yml
+++ b/production.yml
@@ -36,25 +36,10 @@ services:
     restart: always
     networks:
       - myApps_nw
-  myapps_client:
-    build:
-      context: ./client
-      dockerfile: ../docker/local/react/Dockerfile
-    image: myapps_client
-    container_name: myapps_client
-    # ports:
-    #   - "3000:5173"
-    expose:
-      - "5173"
-    restart: always
-    volumes:
-      - /app/node_modules
-    networks:
-      - myApps_nw
   myapps_nginx:
     build:
-      context: ./docker/production/nginx
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./docker/production/nginx/Dockerfile
     image: myapps_nginx
     container_name: myapps_nginx
     restart: always
@@ -62,6 +47,7 @@ services:
       - "8080:80"
     volumes:
       - static_volume:/app/static
+      - client_volume:/app/dist
       - myapps_logs_store:/var/log/nginx
     depends_on:
       - myapps_api
@@ -75,3 +61,4 @@ volumes:
   myapps_postgres_db_data: {}
   myapps_logs_store: {}
   static_volume: {}
+  client_volume: {}
