feat: add celery and celery beat and flower to local and production stack

--- a/.envs/.env.example
+++ b/.envs/.env.example
@@ -14,6 +14,11 @@ PROD_ENV=""
 COOKIE_SECURE=""
 
 
+CELERY_BROKER_URL = ""
+CELERY_RESULT_BACKEND = ""
+CELERY_FLOWER_USER=""
+CELERY_FLOWER_PASSWORD=""
+
 
 EMAIL_HOST=""
 EMAIL_USE_TLS=""
