--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,11 @@ argon2-cffi = "==23.1.0"
 djoser = "==2.2.3"
 djangorestframework-simplejwt = "==5.3.1"
 drf-spectacular = "==0.27.2"
+django-celery-email = "*"
+django-celery-beat = "*"
+redis = "*"
+celery = "*"
+flower = "*"
 
 [dev-packages]
 flake8 = "==7.1.0"
