--- a/docker/production/django/Dockerfile
+++ b/docker/production/django/Dockerfile
@@ -57,6 +57,21 @@ RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
 
+COPY --chown=django:django ./docker/production/django/celery/worker/start.sh /start-celeryworker
+RUN sed -i 's/\r$//g' /start-celeryworker
+RUN chmod +x /start-celeryworker
+
+
+COPY --chown=django:django ./docker/production/django/celery/beat/start.sh /start-celerybeat
+RUN sed -i 's/\r$//g' /start-celerybeat
+RUN chmod +x /start-celerybeat
+
+
+COPY --chown=django:django ./docker/production/django/celery/flower/start.sh /start-flower
+RUN sed -i 's/\r$//g' /start-flower
+RUN chmod +x /start-flower
+
+
 
 
 
