--- a/local.yml
+++ b/local.yml
@@ -1,6 +1,6 @@
 ---
 services:
-  myapps_api:
+  myapps_api: &myapps_api
     build:
       context: .
       dockerfile: ./docker/local/django/Dockerfile
@@ -9,14 +9,13 @@ services:
     volumes:
       - ./api:/app:z
       - static_data:/app/static
-    # ports:
-    #   - "8001:8000"
     expose:
       - "8000"
     env_file:
       - ./.envs/.env.local
     depends_on:
       - myapps_postgres_db
+      - myapps_redis
     command: /start
     networks:
       - myApps_nw
@@ -41,8 +40,6 @@ services:
       dockerfile: ../docker/local/react/Dockerfile
     image: myapps_client
     container_name: myapps_client
-    # ports:
-    #   - "3000:5173"
     expose:
       - "5173"
     volumes:
@@ -50,6 +47,36 @@ services:
       - /app/node_modules
     networks:
       - myApps_nw
+
+  myapps_redis:
+    image: redis:7.2.5-alpine3.20
+    command: redis-server --appendonly yes
+    container_name: myapps_redis
+    volumes:
+      - myapps_redis_data:/data
+    networks:
+      - myApps_nw
+
+  myapps_celery_worker:
+    <<: *myapps_api
+    image: myapps_celery_worker
+    container_name: myapps_celery_worker
+    command: /start-celeryworker
+
+  myapps_celery_beat:
+    <<: *myapps_api
+    image: myapps_celery_beat
+    container_name: myapps_celery_beat
+    command: /start-celerybeat
+
+  myapps_flower:
+    <<: *myapps_api
+    image: myapps_flower
+    container_name: myapps_flower
+    ports:
+      - "5555:5555"
+    command: /start-flower
+
   myapps_nginx:
     build:
       context: ./docker/local/nginx
@@ -74,3 +101,4 @@ volumes:
   myapps_postgres_db_data: {}
   myapps_logs_store: {}
   static_data: {}
+  myapps_redis_data: {}
