chore: add the pages who the app has and add one component comming soon

--- a/Pipfile
+++ b/Pipfile
@@ -11,11 +11,11 @@ argon2-cffi = "==23.1.0"
 djoser = "==2.2.3"
 djangorestframework-simplejwt = "==5.3.1"
 drf-spectacular = "==0.27.2"
-django-celery-email = "*"
-django-celery-beat = "*"
-redis = "*"
-celery = "*"
-flower = "*"
+django-celery-email = "==3.0.0"
+django-celery-beat = "==2.7.0"
+redis = "==5.0.8"
+celery = "==5.4.0"
+flower = "==2.0.1"
 
 [dev-packages]
 flake8 = "==7.1.0"
