--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,8 @@ pytest = "==8.3.2"
 pytest-cov = "==5.0.0"
 pytest-django = "==4.8.0"
 pytest-sugar = "==1.0.0"
+watchfiles = "==0.24.0"
+pytz = "==2024.1"
 
 [requires]
 python_version = "3.12"
