--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "react-select": "^5.8.1"
+    "react-select": "^5.8.1",
+    "react-select-search": "^4.1.8"
   },
   "devDependencies": {
     "@svgr/cli": "^8.1.0",
