--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@svgr/cli": "^8.1.0",
