--- a/docker/local/nginx/nginx.conf
+++ b/docker/local/nginx/nginx.conf
@@ -15,6 +15,7 @@ upstream api {
  
  server {
     listen 80;
+    server_name photo.drosinakis.com;
     client_max_body_size  20M;
 
     error_log /var/log/nginx/error.log error;
