--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -47,7 +47,7 @@
 
   server {
     listen 80;
-    server_name drosinakis.com www.drosinakis.com test.drosinakis.com;
+    server_name _ default_server;
 
     client_max_body_size  20M;
 
