--- a/production.yml
+++ b/production.yml
@@ -58,13 +58,13 @@ services:
     container_name: myapps_celery_beat
     command: /start-celerybeat
 
-  myapps_flower:
-    <<: *myapps_api
-    image: myapps_flower
-    container_name: myapps_flower
-    ports:
-      - "5555:5555"
-    command: /start-flower
+  # myapps_flower:
+  #   <<: *myapps_api
+  #   image: myapps_flower
+  #   container_name: myapps_flower
+  #   ports:
+  #     - "5555:5555"
+  #   command: /start-flower
   myapps_nginx:
     build:
       context: .
@@ -72,18 +72,24 @@ services:
     image: myapps_nginx
     container_name: myapps_nginx
     restart: always
-    ports:
-      - "8080:80"
+    expose:
+        - 80
+    # ports:
+    #   - "8080:80"
     volumes:
       - static_volume:/app/static
       - myapps_logs_store:/var/log/nginx
     depends_on:
       - myapps_api
     networks:
+      - prod-nginx-net
       - myApps_nw
 
 networks:
   myApps_nw:
+    internal: true
+  prod-nginx-net:
+    external: true
 
 volumes:
   myapps_postgres_db_data: {}
