--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-query-devtools": "^5.51.21",
     "axios": "^1.7.3",
+    "cookie": "^1.0.2",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-datepicker": "^7.3.0",
