--- a/client/package.json
+++ b/client/package.json
@@ -6,41 +6,37 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
-    "@tanstack/react-query": "^5.51.21",
-    "@tanstack/react-query-devtools": "^5.51.21",
-    "axios": "^1.7.3",
-    "cookie": "^1.0.2",
-    "react": "^18.3.1",
-    "react-cookie": "^7.2.0",
-    "react-datepicker": "^7.3.0",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.2",
-    "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0",
-    "react-select": "^5.8.1",
-    "react-select-search": "^4.1.8"
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.11.0",
+    "react": "^19.1.1",
+    "react-datepicker": "^8.4.0",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.61.1",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.7.1",
+    "react-select": "^5.10.2",
+    "tailwindcss": "^4.1.11",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
-    "@svgr/cli": "^8.1.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-plugin-svgr": "^4.2.0"
+    "@eslint/js": "^9.32.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6"
   }
 }
