--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.534.0",
     "motion": "^12.23.12",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.1",
@@ -32,6 +33,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "vite-plugin-svgr": "^4.3.0",
