--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,6 @@
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
@@ -27,7 +25,7 @@
     "lucide-react": "^0.534.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
-    "react-datepicker": "^8.4.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
